# P-master

./: .gitignore  Cargo.toml  CUsersjulie.claudeplanstidy-foraging-stardust-agent-a7231e46758a6843d.md  Dockerfile  PLAN_SUPER_BOT.md  PORTABLE.md  README.md  action_patch.py  build_portable.ps1  capture_images.cmd  circuit_patch.py  config.json  docker-compose.infra.yml  fix_reliability.patch  lancer.cmd  lancer_training.cmd  lancer_yolo.cmd  launch_pokermaster_tauri_debug.cmd  launch_pokermaster_v2.cmd  launch_pokermaster_v2.ps1  launch_pokermaster_v2.sh  launch_pokermaster_v2_nobuild.cmd  launch_pokermaster_v2_nobuild.ps1  launch_pokermaster_web.cmd  live_recon_patch.py  main.py  patch.py  patch1.py  patch2.py  patch3.py  patch4.py  patch_hybrid.py  pytest.ini  readme.rst  recover.py  recover2.py  recovered.py  requirements.txt  requirements_2026.txt  requirements_mac.txt  (+12 more)
archive/: V1_LEGACY.md  fix_db_test.py  fix_db_test2.py  fix_db_test3.py  fix_db_test_final.py  fix_db_test_final10.py  fix_db_test_final12.py  fix_db_test_final2.py  fix_db_test_final3.py  fix_db_test_final4.py  fix_db_test_final5.py  fix_db_test_final6.py  fix_db_test_final7.py  fix_db_test_final8.py  fix_db_test_final9.py  fix_profile_test.py  fix_sanity_checker.py  fix_table_tracker.py  fix_test.py  human_interaction.py  patch_action_controller.py  patch_sanity_checker.py  patch_table_tracker.py  patch_tt_init.py  patch_tt_test.py  patch_tt_test2.py  patch_tt_update.py  rewrite_bet.py
doc/: SHADOW_MODE_PROCEDURE.md  (+3 more)
gto_server/: Cargo.toml
gto_server/src/: main.rs
python_bindings/: Cargo.toml  pyproject.toml
python_bindings/src/: lib.rs
website/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
website/src-tauri/.cargo/: config.toml
website/src-tauri/src/: lib.rs  main.rs
(+1518 files in other folders)
