[package]
name = "postflop-solver-py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "postflop_solver_py"
crate-type = ["cdylib"]

[dependencies]
postflop_solver = { path = "..", package = "postflop-solver", default-features = false, features = ["rayon"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
