[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "postflop-solver-py"
version = "0.1.0"
description = "PyO3 bindings for the postflop-solver Rust crate"
requires-python = ">=3.10"

[tool.maturin]
manifest-path = "Cargo.toml"
bindings = "pyo3"
module-name = "postflop_solver_py"
